--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.596.0",
+    "typescript": "^5.4.5"
+  }
 }
