--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.596.0",
+    "@aws-sdk/s3-request-presigner": "^3.596.0",
     "typescript": "^5.4.5"
   }
 }
