--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.596.0",
     "@aws-sdk/s3-request-presigner": "^3.596.0",
+    "dotenv": "^16.4.5",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0"
   }
 }
